crf implementado en la inferencia

--- a/loadMyWhisper.ipynb
+++ b/loadMyWhisper.ipynb
@@ -6,12 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import MyCustomTokenizer, MyDataCollator, create_my_whisper_model, prepare_dataset, compute_metrics\n",
+    "from utils import MyCustomTokenizer, MyDataCollator, create_my_whisper_model, prepare_dataset, compute_metrics, crf\n",
     "import torch\n",
     "from datasets import load_from_disk\n",
     "from transformers import WhisperProcessor, Seq2SeqTrainer, Seq2SeqTrainingArguments\n",
     "import numpy as np\n",
-    "from functools import partial"
+    "from functools import partial\n",
+    "import evaluate"
    ]
   },
   {
@@ -63,25 +64,18 @@
       "True\n",
       "torch.Size([11, 768])\n",
       "torch.Size([11, 768])\n",
-      "11\n"
+      "11\n",
+      "True\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<All keys matched successfully>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
     "model = create_my_whisper_model(myTokenizer=myTokenizer)\n",
     "\n",
-    "model.load_state_dict(torch.load(\"whisper-small-ca/model-small-ca\", weights_only=True))\n"
+    "model.load_state_dict(torch.load(\"whisper-small-ca/model-small-ca\", weights_only=True))\n",
+    "\n",
+    "print(model.model.decoder.embed_tokens.weight is model.proj_out.weight)\n"
    ]
   },
   {
@@ -172,15 +166,7 @@
     },
     {
      "data": {
-      "text/html": [
-       "\n",
-       "    <div>\n",
-       "      \n",
-       "      <progress value='7' max='7' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [7/7 00:41]\n",
-       "    </div>\n",
-       "    "
-      ],
+      "text/html": [],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
@@ -192,10 +178,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "predicted:  ['llençar caixa deixar pilota', 'agafar caixa llençar caixa', 'llençar caixa deixar caixa', 'llençar pilota', 'agafar caixa agafar pilota', 'deixar caixa', 'agafar pilota', 'deixar pilota llençar caixa', 'agafar caixa', 'deixar pilota llençar pilota', 'agafar pilota agafar caixa', 'deixar caixa', 'llençar pilota agafar caixa', 'llençar pilota agafar pilota', 'deixar caixa llençar pilota', 'llençar pilota agafar caixa', 'llençar pilota agafar caixa', 'llençar pilota deixar caixa', 'deixar pilota agafar pilota', 'agafar caixa agafar pilota', 'agafar caixa llençar pilota', 'deixar caixa llençar pilota', 'agafar pilota deixar pilota', 'llençar caixa agafar caixa', 'llençar caixa agafar pilota', 'deixar pilota llençar pilota', 'llençar pilota agafar caixa', 'agafar caixa deixar pilota', 'agafar pilota', 'deixar pilota llençar pilota', 'deixar caixa llençar pilota', 'llençar pilota deixar caixa', 'llençar caixa deixar pilota', 'agafar caixa deixar caixa', 'agafar pilota deixar caixa', 'llençar pilota agafar caixa', 'deixar caixa llençar caixa', 'llençar pilota deixar caixa', 'deixar caixa llençar pilota', 'llençar pilota', 'llençar pilota agafar caixa', 'agafar pilota llençar pilota', 'deixar pilota agafar caixa', 'agafar caixa llençar caixa', 'agafar caixa', 'agafar caixa', 'deixar pilota', 'deixar caixa agafar pilota', 'agafar caixa deixar pilota', 'agafar caixa llençar caixa', 'agafar pilota agafar caixa', 'llençar pilota', 'agafar caixa llençar pilota', 'agafar caixa deixar pilota', 'agafar pilota deixar caixa', 'llençar pilota agafar caixa', 'llençar pilota deixar caixa', 'deixar caixa llençar pilota', 'deixar pilota agafar caixa', 'deixar caixa agafar pilota', 'llençar caixa', 'deixar caixa llençar pilota', 'llençar caixa deixar pilota', 'agafar pilota llençar caixa', 'deixar caixa', 'deixar caixa llençar pilota', 'llençar caixa agafar pilota', 'agafar pilota deixar caixa', 'deixar caixa agafar caixa', 'llençar pilota agafar caixa', 'llençar caixa agafar pilota', 'agafar pilota llençar caixa', 'deixar pilota agafar caixa', 'deixar caixa deixar pilota', 'agafar caixa agafar pilota', 'agafar caixa deixar caixa', 'llençar caixa deixar pilota', 'llençar caixa agafar pilota', 'agafar pilota agafar caixa', 'agafar pilota llençar pilota', 'llençar caixa deixar pilota', 'agafar pilota llençar caixa', 'deixar caixa agafar pilota', 'llençar pilota llençar caixa', 'deixar pilota llençar caixa', 'agafar caixa llençar pilota', 'deixar caixa llençar pilota', 'llençar caixa', 'agafar pilota llençar pilota', 'agafar caixa deixar pilota', 'llençar pilota agafar caixa', 'deixar caixa deixar pilota', 'llençar caixa deixar pilota', 'deixar pilota', 'llençar pilota deixar pilota', 'llençar caixa agafar pilota', 'agafar caixa deixar caixa', 'llençar caixa agafar caixa', 'deixar pilota deixar caixa', 'agafar pilota llençar caixa']\n",
-      "labels:  ['llençar caixa deixar pilota', 'agafar caixa llençar caixa', 'llençar caixa deixar caixa', 'llençar pilota', 'agafar caixa agafar pilota', 'deixar caixa', 'agafar pilota', 'deixar pilota llençar caixa', 'agafar caixa', 'deixar pilota llençar pilota', 'agafar pilota agafar caixa', 'deixar caixa', 'llençar pilota agafar caixa', 'llençar pilota agafar pilota', 'deixar caixa llençar pilota', 'llençar pilota agafar caixa', 'llençar pilota agafar caixa', 'llençar pilota deixar caixa', 'deixar pilota agafar pilota', 'agafar caixa agafar pilota', 'agafar caixa llençar pilota', 'deixar caixa llençar pilota', 'agafar pilota deixar pilota', 'llençar caixa agafar caixa', 'llençar caixa agafar pilota', 'deixar pilota llençar pilota', 'llençar pilota agafar caixa', 'agafar caixa deixar pilota', 'agafar pilota', 'deixar pilota llençar pilota', 'deixar caixa llençar pilota', 'llençar pilota deixar caixa', 'llençar caixa deixar pilota', 'agafar caixa deixar caixa', 'agafar pilota deixar caixa', 'llençar pilota agafar caixa', 'deixar caixa llençar caixa', 'llençar pilota deixar caixa', 'deixar caixa llençar pilota', 'llençar pilota', 'llençar pilota agafar caixa', 'agafar pilota llençar pilota', 'deixar pilota agafar caixa', 'agafar caixa llençar caixa', 'agafar caixa', 'agafar caixa', 'deixar pilota', 'deixar caixa agafar pilota', 'agafar caixa deixar pilota', 'agafar caixa llençar caixa', 'agafar pilota agafar caixa', 'llençar pilota', 'agafar caixa llençar pilota', 'agafar caixa deixar caixa', 'agafar pilota deixar caixa', 'llençar pilota agafar caixa', 'llençar pilota deixar caixa', 'deixar caixa llençar pilota', 'deixar pilota agafar caixa', 'deixar caixa agafar pilota', 'llençar caixa', 'deixar caixa llençar pilota', 'llençar caixa deixar pilota', 'agafar pilota llençar caixa', 'deixar caixa', 'deixar caixa llençar pilota', 'llençar caixa agafar pilota', 'agafar pilota deixar caixa', 'deixar caixa agafar caixa', 'llençar pilota agafar caixa', 'llençar caixa agafar pilota', 'agafar pilota llençar caixa', 'deixar pilota agafar caixa', 'deixar caixa deixar pilota', 'agafar caixa agafar pilota', 'agafar caixa deixar caixa', 'llençar caixa deixar pilota', 'llençar caixa agafar pilota', 'agafar pilota agafar caixa', 'agafar pilota llençar pilota', 'llençar caixa deixar pilota', 'agafar pilota llençar caixa', 'deixar caixa agafar pilota', 'llençar pilota llençar caixa', 'deixar pilota llençar caixa', 'agafar caixa llençar pilota', 'deixar caixa llençar pilota', 'llençar caixa', 'agafar pilota llençar pilota', 'agafar caixa deixar pilota', 'llençar pilota agafar caixa', 'deixar caixa deixar pilota', 'llençar caixa deixar pilota', 'deixar pilota', 'llençar pilota deixar caixa', 'llençar caixa agafar pilota', 'agafar caixa deixar caixa', 'llençar caixa agafar caixa', 'deixar pilota deixar caixa', 'agafar pilota llençar caixa']\n",
-      "wer in %:  0.5405405405405406\n",
-      "Resultados de evaluación: {'eval_loss': 0.002835420425981283, 'eval_model_preparation_time': 0.0053, 'eval_wer': 0.5405405405405406, 'eval_runtime': 53.9056, 'eval_samples_per_second': 1.855, 'eval_steps_per_second': 0.13}\n"
+      "Loggits: [[[ 3.85254955e+00  5.13223171e+00  2.29882765e+00  4.06304741e+00\n",
+      "    2.20220661e+00 -3.06696320e+00 -1.32876790e+00  3.93809748e+00\n",
+      "    2.40637169e+01  3.68621731e+00  5.06297731e+00]\n",
+      "  [ 3.88227797e+00  3.95090318e+00  5.14947605e+00  4.54010534e+00\n",
+      "    3.92293596e+00  4.53559875e+00  3.91867304e+00  2.15303001e+01\n",
+      "    6.07940149e+00  3.12380934e+00  3.78774238e+00]\n",
+      "  [-3.26619816e+00 -3.16114259e+00 -1.16760170e+00 -3.46700048e+00\n",
+      "   -2.92175484e+00 -4.29721594e+00  2.21208978e+00 -6.21102810e+00\n",
+      "   -4.87519646e+00  1.77827187e+01 -3.65769672e+00]\n",
+      "  [-4.38157082e+00  1.47170153e+01 -1.02587211e+00 -6.36096001e+00\n",
+      "   -4.23857784e+00 -6.08483410e+00 -1.24054785e+01 -6.25136566e+00\n",
+      "   -7.00956881e-01 -4.15676975e+00 -4.38167191e+00]\n",
+      "  [ 1.44269741e+00  1.01453257e+00  6.39746237e+00  2.12195206e+01\n",
+      "    4.22571564e+00 -8.75395060e-01 -2.83021259e+00  2.73089552e+00\n",
+      "    4.22566414e+00  1.07082641e+00  2.58942425e-01]\n",
+      "  [-1.93256032e+00 -2.37850046e+00  1.90279999e+01  3.28968620e+00\n",
+      "    1.94761276e-01 -9.32110786e-01  1.73075366e+00 -3.78593445e+00\n",
+      "   -2.21724296e+00  7.50517845e-01  1.21579516e+00]\n",
+      "  [ 3.01798630e+00  3.21257615e+00  4.64707375e+00  8.02897549e+00\n",
+      "    1.59267282e+01  2.61330891e+00  1.31810308e+00  6.57843411e-01\n",
+      "    6.76218987e+00  4.10236883e+00  2.64144421e+00]\n",
+      "  [ 1.31220865e+01  1.40998125e+01  1.67551308e+01  1.47879610e+01\n",
+      "    1.62916451e+01  1.25943851e+01  3.75625153e+01  1.30967808e+01\n",
+      "    1.64923325e+01  1.67825546e+01  1.29776030e+01]]\n",
+      "\n",
+      " [[ 4.55007744e+00  5.08081436e+00  2.74567890e+00  4.84171963e+00\n",
+      "    2.07904959e+00 -1.74595606e+00  2.52673626e-02  4.04812288e+00\n",
+      "    2.64191380e+01  4.99763823e+00  5.43000984e+00]\n",
+      "  [ 3.81291246e+00  3.87821031e+00  5.10336399e+00  4.45968533e+00\n",
+      "    3.87782955e+00  4.48460054e+00  3.96345520e+00  2.13488693e+01\n",
+      "    5.88993502e+00  3.13041997e+00  3.73826766e+00]\n",
+      "  [-3.41894817e+00 -3.52838564e+00 -1.37729144e+00 -3.74172544e+00\n",
+      "   -3.06060696e+00 -4.37000179e+00  2.00383043e+00 -6.23510647e+00\n",
+      "   -4.80455160e+00  1.75216560e+01 -3.94909811e+00]\n",
+      "  [ 1.69017601e+01 -5.14508200e+00  4.38595867e+00 -1.59103858e+00\n",
+      "    5.62183499e-01 -3.50159073e+00 -4.95414734e+00 -5.01163864e+00\n",
+      "   -1.72675490e+00 -5.88380754e-01 -2.16032314e+00]\n",
+      "  [ 2.02673197e+00  3.73213363e+00  2.43019295e+00  1.88592148e+01\n",
+      "    1.75770092e+00 -7.13518918e-01 -2.22586393e+00 -3.21190357e-01\n",
+      "    2.97356391e+00 -1.40777397e+00 -1.83430672e-01]\n",
+      "  [-1.06158102e+00  1.38624029e+01 -6.77382827e-01 -3.85870028e+00\n",
+      "   -3.80804396e+00 -4.67670631e+00 -1.08915234e+01 -3.11965275e+00\n",
+      "   -3.43766928e+00 -1.82812071e+00 -5.24343300e+00]\n",
+      "  [ 2.97849393e+00  5.48382950e+00  4.36814070e+00  1.79359207e+01\n",
+      "    8.92755795e+00  4.74470854e-01 -1.77881277e+00  1.91694081e+00\n",
+      "    6.33783817e+00  2.01450586e+00  1.51417661e+00]\n",
+      "  [ 1.01715612e+01  1.06419058e+01  1.34086695e+01  1.22871885e+01\n",
+      "    1.25916739e+01  9.81658554e+00  3.48597107e+01  1.04197502e+01\n",
+      "    1.52916489e+01  1.35282631e+01  1.10664616e+01]]]\n"
      ]
     }
    ],
@@ -207,13 +238,13 @@
     "    tokenizer=myTokenizer)\n",
     "\n",
     "training_args = Seq2SeqTrainingArguments(\n",
-    "    #output_dir=\"./results\",\n",
-    "    do_train=False,                  # No se realiza entrenamiento.\n",
-    "    do_eval=True,                    # Se realiza evaluación.\n",
-    "    per_device_eval_batch_size=16,   # Ajusta según tus recursos.\n",
-    "    predict_with_generate=True,      # Para que se generen las salidas completas.\n",
-    "    eval_strategy=\"epoch\",     # Evalúa al final de cada época (o puedes usar \"steps\").\n",
-    "    #logging_steps=50,                # Número de pasos entre logs (ajusta según convenga).\n",
+    "    output_dir=\"temp_dir\",         # Puedes usar un directorio temporal o uno que luego elimines\n",
+    "    do_train=False,                # No se realiza entrenamiento\n",
+    "    do_eval=False,                 # Si no vas a evaluar\n",
+    "    per_device_eval_batch_size=16, # Tamaño de batch de predicción\n",
+    "    predict_with_generate=False,   # Si solo quieres obtener los logits, o True si deseas generación\n",
+    "    save_strategy=\"no\",            # Deshabilitar guardado de checkpoints\n",
+    "    logging_strategy=\"no\"          # Deshabilitar logging automático\n",
     ")\n",
     "\n",
     "trainer = Seq2SeqTrainer(\n",
@@ -221,12 +252,54 @@
     "    args=training_args,\n",
     "    eval_dataset=dataset_dict_prepared,\n",
     "    data_collator=data_collator,\n",
-    "    compute_metrics=compute_metrics_fn\n",
     ")\n",
     "\n",
+    "\"\"\"\n",
     "# Ejecuta la evaluación:\n",
     "eval_results = trainer.evaluate()\n",
-    "print(\"Resultados de evaluación:\", eval_results)\n"
+    "print(\"Resultados de evaluación:\", eval_results)\n",
+    "\"\"\"\n",
+    "\n",
+    "pred_output = trainer.predict(dataset_dict_prepared.select(range(2)))\n",
+    "\n",
+    "print(\"Loggits:\", pred_output.predictions[0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decoded sequence: llençar caixa deixar pilota\n",
+      "Labels Decoded sequence: llençar caixa deixar pilota\n",
+      "Word Error Rate (WER) in %: 0.0\n",
+      "Decoded sequence: agafar caixa llençar caixa\n",
+      "Labels Decoded sequence: agafar caixa llençar caixa\n",
+      "Word Error Rate (WER) in %: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "emission_scores = pred_output.predictions[0]\n",
+    "\n",
+    "labels = pred_output.label_ids\n",
+    "\n",
+    "transitions_file = \"transitions_file.txt\"\n",
+    "for i, es in enumerate(emission_scores): # lo hacemos por cada elemento del batch\n",
+    "    decoded_sequence = crf(transitions_file=transitions_file,myTokenizer=myTokenizer, emission_scores=es)\n",
+    "    print(\"Decoded sequence:\", decoded_sequence)\n",
+    "    decoded_labels = myTokenizer.decode(labels[i], skip_special_tokens=True)\n",
+    "    print(\"Labels Decoded sequence:\", decoded_labels)\n",
+    "\n",
+    "    metric = evaluate.load(\"wer\")\n",
+    "\n",
+    "    wer = 100 * metric.compute(predictions=[decoded_sequence], references=[decoded_labels])\n",
+    "\n",
+    "    print(\"Word Error Rate (WER) in %:\", wer)"
    ]
   }
  ],
