pesos del modelo

--- a/loadMyWhisper.ipynb
+++ b/loadMyWhisper.ipynb
@@ -37,7 +37,6 @@
    ],
    "source": [
     "\n",
-    "saved_model_path = \"whisper-small-ca\"\n",
     "vocab_path = f\"ca-vocab.json\"\n",
     "myTokenizer = MyCustomTokenizer(vocab_file = vocab_path, special_tokens_on_vocab_file=False)\n",
     "print(myTokenizer.vocab)\n"
@@ -73,7 +72,7 @@
     "\n",
     "model = create_my_whisper_model(myTokenizer=myTokenizer)\n",
     "\n",
-    "model.load_state_dict(torch.load(\"whisper-small-ca/model-small-ca\", weights_only=True))\n",
+    "model.load_state_dict(torch.load(\"whisper-small-ca/model-small-ca.bin\", weights_only=True))\n",
     "\n",
     "print(model.model.decoder.embed_tokens.weight is model.proj_out.weight)\n"
    ]
