--- a/trainMyWhisper.ipynb
+++ b/trainMyWhisper.ipynb
@@ -496,7 +496,7 @@
       ],
       "source": [
         "print(model.state_dict)\n",
-        "path = \"whisper-small-ca/model-small-ca\"\n",
+        "path = \"whisper-small-ca/model-small-ca.bin\"\n",
         "torch.save(model.state_dict(), path)\n",
         "print(f\"modelo guardado en {path}\")"
       ]
