--- a/notebooks/loadMyWhisper.ipynb
+++ b/notebooks/loadMyWhisper.ipynb
@@ -1,12 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Code Loading my pretrained model and doing inference"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import MyCustomTokenizer, MyDataCollator, create_my_whisper_model, prepare_dataset, compute_metrics, crf\n",
+    "from ..src.utils import MyCustomTokenizer, MyDataCollator, create_my_whisper_model, prepare_dataset, compute_metrics, crf\n",
     "import torch\n",
     "from datasets import load_from_disk\n",
     "from transformers import WhisperProcessor, Seq2SeqTrainer, Seq2SeqTrainingArguments\n",
@@ -24,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -36,8 +43,8 @@
     }
    ],
    "source": [
-    "\n",
-    "vocab_path = f\"ca-vocab.json\"\n",
+    "configs_path = \"../config-data\"\n",
+    "vocab_path = f\"{configs_path}/ca-vocab.json\"\n",
     "myTokenizer = MyCustomTokenizer(vocab_file = vocab_path, special_tokens_on_vocab_file=False)\n",
     "print(myTokenizer.vocab)\n"
    ]
@@ -266,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +294,7 @@
     "\n",
     "labels = pred_output.label_ids\n",
     "\n",
-    "transitions_file = \"transitions_file.txt\"\n",
+    "transitions_file = f\"{configs_path}/transitions_file.txt\"\n",
     "for i, es in enumerate(emission_scores): # lo hacemos por cada elemento del batch\n",
     "    decoded_sequence = crf(transitions_file=transitions_file,myTokenizer=myTokenizer, emission_scores=es)\n",
     "    print(\"Decoded sequence:\", decoded_sequence)\n",
