--- a/notebooks/trainMyWhisper.ipynb
+++ b/notebooks/trainMyWhisper.ipynb
@@ -9,11 +9,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "from utils import *\n",
+        "from ..src.utils import *\n",
         "from functools import partial\n",
         "import numpy as np\n",
         "from transformers import WhisperProcessor\n",
@@ -48,8 +48,8 @@
         "task = \"transcribe\"\n",
         "\n",
         "processor = WhisperProcessor.from_pretrained(model_id, language=language, task=task)\n",
-        "\n",
-        "myTokenizer = MyCustomTokenizer(vocab_file=\"ca-vocab.json\")\n",
+        "configs_path = f\"../config-data\"\n",
+        "myTokenizer = MyCustomTokenizer(vocab_file=f\"{configs_path}/ca-vocab.json\")\n",
         "\n",
         "print(myTokenizer.tokenize(\"agafar,caixa\"))\n",
         "\n",
