reorganizando y poniendo bien los path

--- a/loadMyWhisper.ipynb
+++ b/loadMyWhisper.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ..src.utils import MyCustomTokenizer, MyDataCollator, create_my_whisper_model, prepare_dataset, compute_metrics, crf\n",
+    "from src.utils import MyCustomTokenizer, MyDataCollator, create_my_whisper_model, prepare_dataset, compute_metrics, crf\n",
     "import torch\n",
     "from datasets import load_from_disk\n",
     "from transformers import WhisperProcessor, Seq2SeqTrainer, Seq2SeqTrainingArguments\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
     }
    ],
    "source": [
-    "configs_path = \"../config-data\"\n",
+    "configs_path = \"config-data\"\n",
     "vocab_path = f\"{configs_path}/ca-vocab.json\"\n",
     "myTokenizer = MyCustomTokenizer(vocab_file = vocab_path, special_tokens_on_vocab_file=False)\n",
     "print(myTokenizer.vocab)\n"
@@ -65,12 +65,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['ag', 'afar'], ['llen', 'Ã§ar'], ['de', 'ix', 'ar'], ['ca', 'ixa'], ['p', 'il', 'ota'], ['<|startoftranscript|>'], ['<|endoftext|>'], ['<|transcribe|>'], ['<|ca|>'], ['<|notimestamps|>'], ['<|startofprev|>']]\n",
-      "[[559, 47030], [19191, 26378], [1479, 970, 289], [496, 19195], [79, 388, 5377], [50258], [50257], [50359], [50270], [50363], [50361]]\n",
-      "True\n",
-      "torch.Size([11, 768])\n",
-      "torch.Size([11, 768])\n",
-      "11\n",
+      "embeding tokens layer and projection layer share the same weights: True\n",
+      "shape of embedding tokens layer:  torch.Size([11, 768])\n",
+      "changing model's config vocab_size: 11\n",
       "True\n"
      ]
     }
@@ -103,7 +100,7 @@
       "        num_rows: 100\n",
       "    })\n",
       "})\n",
-      "deixar,caixa,llençar,pilota\n"
+      "deixar,caixa,deixar,pilota\n"
      ]
     }
    ],
@@ -117,7 +114,22 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e83f3bbaf120406986d948b8cdcbe08d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/100 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "model_id = \"openai/whisper-small\"\n",
     "language = \"ca\"\n",
@@ -143,10 +155,10 @@
       "    features: ['input_features', 'labels'],\n",
       "    num_rows: 100\n",
       "})\n",
-      "[5, 8, 7, 9, 1, 3, 2, 4, 6]\n",
+      "[5, 8, 7, 9, 2, 3, 0, 4, 6]\n",
       "(80, 3000)\n",
-      "<|startoftranscript|> <|ca|> <|transcribe|> <|notimestamps|> llençar caixa deixar pilota <|endoftext|>\n",
-      "llençar caixa deixar pilota\n"
+      "<|startoftranscript|> <|ca|> <|transcribe|> <|notimestamps|> deixar caixa agafar pilota <|endoftext|>\n",
+      "deixar caixa agafar pilota\n"
      ]
     }
    ],
@@ -184,55 +196,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loggits: [[[ 3.85254955e+00  5.13223171e+00  2.29882765e+00  4.06304741e+00\n",
-      "    2.20220661e+00 -3.06696320e+00 -1.32876790e+00  3.93809748e+00\n",
-      "    2.40637169e+01  3.68621731e+00  5.06297731e+00]\n",
-      "  [ 3.88227797e+00  3.95090318e+00  5.14947605e+00  4.54010534e+00\n",
-      "    3.92293596e+00  4.53559875e+00  3.91867304e+00  2.15303001e+01\n",
-      "    6.07940149e+00  3.12380934e+00  3.78774238e+00]\n",
-      "  [-3.26619816e+00 -3.16114259e+00 -1.16760170e+00 -3.46700048e+00\n",
-      "   -2.92175484e+00 -4.29721594e+00  2.21208978e+00 -6.21102810e+00\n",
-      "   -4.87519646e+00  1.77827187e+01 -3.65769672e+00]\n",
-      "  [-4.38157082e+00  1.47170153e+01 -1.02587211e+00 -6.36096001e+00\n",
-      "   -4.23857784e+00 -6.08483410e+00 -1.24054785e+01 -6.25136566e+00\n",
-      "   -7.00956881e-01 -4.15676975e+00 -4.38167191e+00]\n",
-      "  [ 1.44269741e+00  1.01453257e+00  6.39746237e+00  2.12195206e+01\n",
-      "    4.22571564e+00 -8.75395060e-01 -2.83021259e+00  2.73089552e+00\n",
-      "    4.22566414e+00  1.07082641e+00  2.58942425e-01]\n",
-      "  [-1.93256032e+00 -2.37850046e+00  1.90279999e+01  3.28968620e+00\n",
-      "    1.94761276e-01 -9.32110786e-01  1.73075366e+00 -3.78593445e+00\n",
-      "   -2.21724296e+00  7.50517845e-01  1.21579516e+00]\n",
-      "  [ 3.01798630e+00  3.21257615e+00  4.64707375e+00  8.02897549e+00\n",
-      "    1.59267282e+01  2.61330891e+00  1.31810308e+00  6.57843411e-01\n",
-      "    6.76218987e+00  4.10236883e+00  2.64144421e+00]\n",
-      "  [ 1.31220865e+01  1.40998125e+01  1.67551308e+01  1.47879610e+01\n",
-      "    1.62916451e+01  1.25943851e+01  3.75625153e+01  1.30967808e+01\n",
-      "    1.64923325e+01  1.67825546e+01  1.29776030e+01]]\n",
+      "Loggits: [[[ 4.50201941e+00  4.96576834e+00  2.54502797e+00  4.31525230e+00\n",
+      "    2.15152788e+00 -2.48287272e+00  5.57102442e-01  3.38520098e+00\n",
+      "    2.66460266e+01  4.54913235e+00  4.88377190e+00]\n",
+      "  [ 3.82566690e+00  3.89053583e+00  5.08556128e+00  4.46134615e+00\n",
+      "    3.86609745e+00  4.38014317e+00  3.92341900e+00  2.10325356e+01\n",
+      "    5.92154264e+00  3.05594921e+00  3.68958783e+00]\n",
+      "  [-3.94085407e+00 -3.96751714e+00 -1.82416773e+00 -4.29596424e+00\n",
+      "   -3.67236328e+00 -4.56119585e+00  1.69887722e+00 -6.71873474e+00\n",
+      "   -5.32996655e+00  1.67842941e+01 -4.19086885e+00]\n",
+      "  [-2.11385512e+00 -4.90395737e+00  1.94160843e+01  1.90426946e+00\n",
+      "    1.03237402e+00 -5.82694054e-01 -3.92123580e+00 -3.46455574e+00\n",
+      "   -4.32737780e+00 -1.03182340e+00 -6.42246842e-01]\n",
+      "  [ 8.91955137e-01  1.48907936e+00  5.10175800e+00  2.10894508e+01\n",
+      "    4.82513905e+00 -6.25683784e-01 -2.38726139e+00  3.73377919e+00\n",
+      "    3.09208989e+00  1.60822511e-01 -1.68424666e-01]\n",
+      "  [ 1.49282675e+01 -9.12228107e-01 -2.35168219e+00 -3.21145153e+00\n",
+      "    5.01450896e-01 -2.01880741e+00 -1.20017672e+01 -5.09762669e+00\n",
+      "   -1.04679906e+00 -5.60830307e+00 -1.86410213e+00]\n",
+      "  [-1.48079300e+00  1.21209192e+00  1.51844752e+00 -1.12933958e+00\n",
+      "    1.63416519e+01  9.01930332e-02  9.88881588e-02 -1.20261788e+00\n",
+      "    9.48703408e-01  8.13946128e-01  4.69726384e-01]\n",
+      "  [ 1.23594475e+01  1.28985109e+01  1.59362087e+01  1.40867167e+01\n",
+      "    1.60656357e+01  1.26277447e+01  3.77242737e+01  1.27780676e+01\n",
+      "    1.52043037e+01  1.59301405e+01  1.32957420e+01]]\n",
       "\n",
-      " [[ 4.55007744e+00  5.08081436e+00  2.74567890e+00  4.84171963e+00\n",
-      "    2.07904959e+00 -1.74595606e+00  2.52673626e-02  4.04812288e+00\n",
-      "    2.64191380e+01  4.99763823e+00  5.43000984e+00]\n",
-      "  [ 3.81291246e+00  3.87821031e+00  5.10336399e+00  4.45968533e+00\n",
-      "    3.87782955e+00  4.48460054e+00  3.96345520e+00  2.13488693e+01\n",
-      "    5.88993502e+00  3.13041997e+00  3.73826766e+00]\n",
-      "  [-3.41894817e+00 -3.52838564e+00 -1.37729144e+00 -3.74172544e+00\n",
-      "   -3.06060696e+00 -4.37000179e+00  2.00383043e+00 -6.23510647e+00\n",
-      "   -4.80455160e+00  1.75216560e+01 -3.94909811e+00]\n",
-      "  [ 1.69017601e+01 -5.14508200e+00  4.38595867e+00 -1.59103858e+00\n",
-      "    5.62183499e-01 -3.50159073e+00 -4.95414734e+00 -5.01163864e+00\n",
-      "   -1.72675490e+00 -5.88380754e-01 -2.16032314e+00]\n",
-      "  [ 2.02673197e+00  3.73213363e+00  2.43019295e+00  1.88592148e+01\n",
-      "    1.75770092e+00 -7.13518918e-01 -2.22586393e+00 -3.21190357e-01\n",
-      "    2.97356391e+00 -1.40777397e+00 -1.83430672e-01]\n",
-      "  [-1.06158102e+00  1.38624029e+01 -6.77382827e-01 -3.85870028e+00\n",
-      "   -3.80804396e+00 -4.67670631e+00 -1.08915234e+01 -3.11965275e+00\n",
-      "   -3.43766928e+00 -1.82812071e+00 -5.24343300e+00]\n",
-      "  [ 2.97849393e+00  5.48382950e+00  4.36814070e+00  1.79359207e+01\n",
-      "    8.92755795e+00  4.74470854e-01 -1.77881277e+00  1.91694081e+00\n",
-      "    6.33783817e+00  2.01450586e+00  1.51417661e+00]\n",
-      "  [ 1.01715612e+01  1.06419058e+01  1.34086695e+01  1.22871885e+01\n",
-      "    1.25916739e+01  9.81658554e+00  3.48597107e+01  1.04197502e+01\n",
-      "    1.52916489e+01  1.35282631e+01  1.10664616e+01]]]\n"
+      " [[ 3.88949585e+00  4.53482914e+00  2.37616444e+00  3.82212734e+00\n",
+      "    1.77473378e+00 -2.78677964e+00  3.26349139e-01  3.50506234e+00\n",
+      "    2.60249214e+01  4.40411615e+00  4.62091637e+00]\n",
+      "  [ 3.83479309e+00  3.90336347e+00  5.12092781e+00  4.49421120e+00\n",
+      "    3.87953854e+00  4.50990772e+00  3.95630646e+00  2.16764202e+01\n",
+      "    5.86887550e+00  3.10104752e+00  3.71488714e+00]\n",
+      "  [-3.64830160e+00 -3.80280709e+00 -1.72931170e+00 -4.01321888e+00\n",
+      "   -3.37081099e+00 -4.60484076e+00  1.71226168e+00 -6.29326057e+00\n",
+      "   -4.98832560e+00  1.71460762e+01 -4.21232843e+00]\n",
+      "  [-6.13602352e+00  1.42914324e+01 -2.89561892e+00 -7.43940592e+00\n",
+      "   -6.10007477e+00 -8.43868065e+00 -1.34966230e+01 -7.12138939e+00\n",
+      "   -2.61621141e+00 -5.70601702e+00 -5.66026878e+00]\n",
+      "  [-3.94967794e+00 -2.80058765e+00 -5.83217144e-01 -4.20070076e+00\n",
+      "    1.24317389e+01 -3.77614951e+00 -4.90122509e+00 -4.87898827e+00\n",
+      "   -4.82798576e+00 -3.17322612e+00 -1.86247540e+00]\n",
+      "  [-4.36605692e-01 -5.55955839e+00  1.72068443e+01  7.81089783e-01\n",
+      "    5.36091089e-01 -5.37624884e+00 -1.09615402e+01 -5.81291866e+00\n",
+      "   -6.37223482e+00 -4.13964176e+00 -2.97273088e+00]\n",
+      "  [ 1.61666358e+00  3.98666763e+00  3.77238011e+00  5.98695755e+00\n",
+      "    1.83213100e+01  1.84264290e+00 -1.21600664e+00  1.32877827e-02\n",
+      "    4.69861126e+00  2.47175121e+00  3.81231999e+00]\n",
+      "  [ 1.30207653e+01  1.31319323e+01  1.67716770e+01  1.40458279e+01\n",
+      "    1.59129848e+01  1.27352257e+01  3.73919373e+01  1.26215887e+01\n",
+      "    1.54495611e+01  1.57276278e+01  1.29395599e+01]]]\n"
      ]
     }
    ],
@@ -273,18 +285,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Decoded sequence: llençar caixa deixar pilota\n",
-      "Labels Decoded sequence: llençar caixa deixar pilota\n",
+      "Decoded sequence: deixar caixa agafar pilota\n",
+      "Labels Decoded sequence: deixar caixa agafar pilota\n",
       "Word Error Rate (WER) in %: 0.0\n",
-      "Decoded sequence: agafar caixa llençar caixa\n",
-      "Labels Decoded sequence: agafar caixa llençar caixa\n",
+      "Decoded sequence: llençar pilota deixar pilota\n",
+      "Labels Decoded sequence: llençar pilota deixar pilota\n",
       "Word Error Rate (WER) in %: 0.0\n"
      ]
     }
