--- a/trainMyWhisper.ipynb
+++ b/trainMyWhisper.ipynb
@@ -13,7 +13,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "from ..src.utils import *\n",
+        "from src.utils import *\n",
         "from functools import partial\n",
         "import numpy as np\n",
         "from transformers import WhisperProcessor\n",
@@ -48,7 +48,7 @@
         "task = \"transcribe\"\n",
         "\n",
         "processor = WhisperProcessor.from_pretrained(model_id, language=language, task=task)\n",
-        "configs_path = f\"../config-data\"\n",
+        "configs_path = f\"config-data\"\n",
         "myTokenizer = MyCustomTokenizer(vocab_file=f\"{configs_path}/ca-vocab.json\")\n",
         "\n",
         "print(myTokenizer.tokenize(\"agafar,caixa\"))\n",
